frontend/test/should_fail/exec_012.grg
rule r1(x:Node) {
  -e:Edge->;
  modify{
    exec(r1(e));
  }
}

